# mission-control

./: .gitignore  PLAN.md  README.md  SHARED_LOG.md  TRACK-A-PROMPT.md  TRACK-B-PROMPT.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-web.yml  edge.yml  latest.yml  release-desktop.yml  release.yml
apps/bridge/: package.json
apps/bridge/src/: bridge.ts  config.ts  index.ts  installer.ts
apps/bridge/src/state/: index.ts  session.ts  sync.ts
apps/desktop/: Cargo.toml  package.json  tauri.conf.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: main.rs
apps/desktop/ui/: index.html
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/server/: bridge.ts
apps/web/src/: App.svelte  app.css
client/: App.svelte  app.css  main.ts
client/components/: ActionsGroup.svelte  ClipCell.svelte  ClipGrid.svelte  ConnectionStatus.svelte  DeleteZone.svelte  Footer.svelte  Header.svelte  HeaderCell.svelte  HelpModal.svelte  InstallBanner.svelte  Knob.svelte  LoadingState.svelte  MixerFooter.svelte  SceneColumn.svelte  SetupPanel.svelte  Toast.svelte  TrackHeader.svelte  VolumeFader.svelte
client/lib/: ClipCell.svelte  ConnectionStatus.svelte  DeleteZone.svelte  Header.svelte  HelpModal.svelte  SceneColumn.svelte  SetupPanel.svelte  TrackHeader.svelte  clipUtils.ts  colorUtils.ts  connection.ts
client/styles/: buttons.css  utilities.css  variables.css
desktop/: CLAUDE.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_STRATEGY.md  MANUAL.md  PROTOCOL.md  TRACK-A-SERVER.md  TRACK-B-UI.md  TRACK-INTEGRATION.md  restructure-plan.md
plans/: desktop-setup-window.md  refactor-app-svelte-componentization.md
protocol/: index.ts  messages.ts  parsers.ts  responses.ts  test-harness.ts  types.ts
public/: manifest.json
scripts/: release.ts
server/: bridge.ts  config.ts  standalone.ts  vite-plugin.ts
server/state/: session.ts  sync.ts
(+10 files in other folders)
