[package]
name = "mission-control-desktop"
version = "0.1.0"
description = "Mission Control - Ableton Live Bridge"
authors = ["Ryan"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "6"
open = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
