[package]
name = "mission-control"
version = "0.0.3"
description = "Control Ableton Live from your browser"
authors = ["Ryan Gavin"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "webview-data-url"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
dirs = "6"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
urlencoding = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
